--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,41 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Evolution</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <title>Farma</title>
+  <%= stylesheet_link_tag    "application", :media => "all" %>
+  <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
 
-<%= yield %>
+<!-- Fixed Navigation Bar ==========-->
+	<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+		<div class="container">
+			  <div class= "navbar-header">
+		        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+		          <span class="icon-bar"></span>
+		          <span class="icon-bar"></span>
+		          <span class="icon-bar"></span>
+		        </button>
+
+	        <a href="/" class="navbar-brand"><span class="icon-gift"></span>Evolution</a>
+	      </div>
+
+	      <div class="navbar-collapse collapse">
+	        <ul class="nav navbar-nav">
+	        	<li><%= link_to "Productos", products_path %></li>
+	        	
+	        	
+				<li><a href="/users">Usuarios</a></li>
+			</ul>
+	      </div>
+
+		</div>
+	</nav>
+
+	<%= yield %>
 
 </body>
 </html>
+
+
