Formated Product Index,Show Views

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,49 +1,45 @@
-<h1>Listing products</h1>
+<div class="container">
+  <h2>Listado de productos</h2>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Description</th>
-      <th>Package</th>
-      <th>Average weigth</th>
-      <th>Unit</th>
-      <th>Stock</th>
-      <th>Number of blisters per box</th>
-      <th>Number of units per blister</th>
-      <th>Max units to produce</th>
-      <th>Production limited by</th>
-      <th>Shape</th>
-      <th>Created by</th>
-      <th>Updated by</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
 
-  <tbody>
-    <% @products.each do |product| %>
-      <tr>
-        <td><%= product.name %></td>
-        <td><%= product.description %></td>
-        <td><%= product.package %></td>
-        <td><%= product.average_weigth %></td>
-        <td><%= product.unit %></td>
-        <td><%= product.stock %></td>
-        <td><%= product.number_of_blisters_per_box %></td>
-        <td><%= product.number_of_units_per_blister %></td>
-        <td><%= product.max_units_to_produce %></td>
-        <td><%= product.production_limited_by %></td>
-        <td><%= product.shape %></td>
-        <td><%= product.created_by %></td>
-        <td><%= product.updated_by %></td>
-        <td><%= link_to 'Show', product %></td>
-        <td><%= link_to 'Edit', edit_product_path(product) %></td>
-        <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
 
-<br>
+  <a href="/products/new" class="btn btn-default" role="button">Nuevo producto</a>
 
-<%= link_to 'New Product', new_product_path %>
+  <br><br>
+  
+  <div class="panel panel-default">
+  <!-- Default panel contents -->
+    
+      <!--<div class="panel-heading">Productos</div> -->
+
+    <!-- Table -->
+      <table class="table">
+        <tr>
+          <th>Producto</th>
+          <th>Stock</th>
+          <th></th>
+          <th></th>
+        </tr>
+
+        <% @products.each do |product| %>
+          <tr>
+            <td><a href="/products/<%= product.id %>"><%= product.name %> | <%= product.package %></a></td>
+            <td>
+              <div class="progress">
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"> 60% Stock
+                </div>
+              </div> 
+            </td>
+            <td><%= link_to 'Eliminar', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          </tr>
+        <% end %>
+
+      </table>
+    </div>
+
+
+
+
+</div>
+
+
