Created Ingredient Scaffold
Edited Ingredient Index View

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,8 @@
 	      <div class="navbar-collapse collapse">
 	        <ul class="nav navbar-nav">
 	        	<li><%= link_to "Productos", products_path %></li>
+	        	<li><%= link_to "Materiales", ingredients_path %></li>
+
 	        	
 	        	
 				<li><a href="/users">Usuarios</a></li>
