Created Component Scaffold & more
Crear Scaffold de Component
Crear Relaciones: Product, Ingredient, Component.
Controlador para sumar average weigth cada vez que se crea, edita o
eliminar un componente.

--- a/app/views/ingredients/_form.html.erb
+++ b/app/views/ingredients/_form.html.erb
@@ -2,7 +2,7 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
-    <%= f.input :name, label: 'Material', required: true %>
+    <%= f.input :name, label: 'Material', required: true, autofocus: true %>
     <%= f.input :unit, label: 'Unidad', collection: [ "unidad","mg"], required: true  %>
 
     <%= f.input :stock, label: 'Stock', required: true  %>
