--- a/app/views/ingredients/edit.html.erb
+++ b/app/views/ingredients/edit.html.erb
@@ -1,6 +1,3 @@
-<h1>Editing ingredient</h1>
+<h1>Editar material</h1>
 
 <%= render 'form' %>
-
-<%= link_to 'Show', @ingredient %> |
-<%= link_to 'Back', ingredients_path %>
