--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,10 +25,7 @@
 	        <ul class="nav navbar-nav">
 	        	<li><%= link_to "Productos", products_path %></li>
 	        	<li><%= link_to "Materiales", ingredients_path %></li>
-
-	        	
-	        	
-				<li><a href="/users">Usuarios</a></li>
+				<!--<li><a href="/users">Usuarios</a></li>-->
 			</ul>
 	      </div>
 
