--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,18 +21,31 @@
 	        <a href="/" class="navbar-brand"><span class="icon-gift"></span>Evolution</a>
 	      </div>
 
-	      <div class="navbar-collapse collapse">
-	        <ul class="nav navbar-nav">
-	        	<li><%= link_to "Productos", products_path %></li>
-	        	<li><%= link_to "Materiales", ingredients_path %></li>
-				<!--<li><a href="/users">Usuarios</a></li>-->
-			</ul>
-	      </div>
+	     <% if user_signed_in? %>
+	     	<div class="navbar-collapse collapse">
+		        <ul class="nav navbar-nav">
+		        	<li><%= link_to "Productos", products_path %></li>
+		        	<li><%= link_to "Materiales", ingredients_path %></li>
+		        	<li><%= link_to "Cerrar Sesión", destroy_user_session_path, method: :delete %></li>
+					<!--<li><a href="/users">Usuarios</a></li>-->
+				</ul>
+	      	</div>
+
+	     <% end -%>
 
 		</div>
 	</nav>
 
+<div class="container">
+	<% flash.each do | type, message | %>
+			<div class="alert <%= flash_class type %>">
+ 			<button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+  			<%= message %>
+		</div>
+		<% end %>
+		<br>
 	<%= yield %>
+</div>
 
 </body>
 </html>
