--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,16 +1,18 @@
-<h2>Sign up</h2>
+<h2>Registrarse</h2>
 
 <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
+	<%= f.input :first_name, label: "Nombre", required: true, autofocus: true %>
+  	<%= f.input :last_name, label: "Apellido", required: true, autofocus: true %>
     <%= f.input :email, required: true, autofocus: true %>
-    <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @validatable) %>
-    <%= f.input :password_confirmation, required: true %>
+    <%= f.input :password, label: "Contraseña", required: true, hint: ("#{@minimum_password_length} characters minimum" if @validatable) %>
+    <%= f.input :password_confirmation, label: "Confirmar Contraseña", required: true %>
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
+    <%= f.button :submit, "Registrarse" %>
   </div>
 <% end %>
 
