--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,7 @@
 		        <ul class="nav navbar-nav">
 		        	<li><%= link_to "Productos", products_path %></li>
 		        	<li><%= link_to "Materiales", ingredients_path %></li>
+		        	<li><a href="/users/edit" ><%=  current_user.first_name %></a></li>
 		        	<li><%= link_to "Cerrar Sesión", destroy_user_session_path, method: :delete %></li>
 					<!--<li><a href="/users">Usuarios</a></li>-->
 				</ul>
