Validaciones: Producto, Ingredient, Componente

--- a/app/views/calculates/show.html.erb
+++ b/app/views/calculates/show.html.erb
@@ -46,7 +46,7 @@
 			  <% end %>
 
 			  <!--Materiales de Empaque Primarios -->
-			  <tr class= "danger">
+			  <tr class= "info">
 			    <th>Materiales de Empaque Primarios</th>
 			    <th></th>
 			    <th></th>
