--- a/app/views/ingredients/index.html.erb
+++ b/app/views/ingredients/index.html.erb
@@ -5,168 +5,141 @@
 
   <br><br>
 
-  <!-- Tabla para mateirales Primarios Activos -->
+  <table class="table">
+    <tr>
+      <th></th>
+      <th>Clave</th>
+      <th>Cantidad</th>
+      <th></th>
+    </tr>
 
-  <div class="panel panel-default">
-  <!-- Default panel contents -->
-    <div class="panel-heading">Materiales Primarios Activos</div>
+    <!--Materia Primarios Activos -->
+    <tr class= "success">
+      <th>Materiales Primarios Activos</th>
+      <th></th>
+      <th></th>
+      <th></th>
+    </tr>
 
-  <!-- Table -->
-    <table class="table">
-      <tr>
-        <th>Material</th>
-        <th>Clave</th>
-        <th>Stock</th>
-        <th></th>
-        <th></th>
-      </tr>
+    <% @ingredients_primarios_activos.each do |material| %>
+    <tr>
+      <td><a href="/ingredients/<%= material.id %>"><%= material.name %></a></td>
+      <td><%= material.external_id %></td>
+      <td>
+        <% if material.unit == "mg"  %>
+          <%= number_to_human(material.stock, units:{unit:"mg", thousand:"g", million:"Kg"})  %>
+        <% else %>
+            <%= material.stock%> <%= material.unit %>es
+        <% end %>
+        <!--
+        <div class="progress">
+          <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"> 90% Stock
+          </div>
+        </div> -->
 
-      <% @ingredients_primarios_activos.each do |material| %>
-        <tr>
-          <td><a href="/ingredients/<%= material.id %>"><%= material.name %></a></td>
-          <td><%= material.external_id %></td>
-          <td>
-            <div class="progress">
-              <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"> 90% Stock
-              </div>
-            </div> 
-          </td>
-          <!-- Mostrar boton de eliminar solo para admins -->
-          <% if current_user.role == 'admin' %>
-            <td><%= link_to 'Eliminar', material, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-          <% end %>
+      </td>
+      <!-- Mostrar boton de eliminar solo para admins -->
+        <% if current_user.role == 'admin' %>
+          <td><%= link_to 'Eliminar', material, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
 
-        </tr>
+    </tr>
+    <% end %>
+
+    <!--Materia Primarios Excipientes -->
+    <tr class= "success">
+      <th>Materiales Primarios Excipientes</th>
+      <th></th>
+      <th></th>
+      <th></th>
+    </tr>
+
+    <% @ingredients_primarios_excipientes.each do |material| %>
+    <tr>
+      <td><a href="/ingredients/<%= material.id %>"><%= material.name %></a></td>
+      <td><%= material.external_id %></td>
+      <td>
+        <% if material.unit == "mg"  %>
+          <%= number_to_human(material.stock, units:{unit:"mg", thousand:"g", million:"Kg"})  %>
+        <% else %>
+            <%= material.stock%> <%= material.unit %>es
+        <% end %>
+      </td>
+      
+      <!-- Mostrar boton de eliminar solo para admins -->
+      <% if current_user.role == 'admin' %>
+        <td><%= link_to 'Eliminar', material, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      <% end %>
+    </tr>
+    <% end %>
+
+        
+    <!--Materiales de Empaque Primarios -->
+    <tr class= "info">
+      <th>Materiales de Empaque Primarios</th>
+      <th></th>
+      <th></th>
+      <th></th>
+    </tr>
+
+    <% @ingredients_empaque_primario .each do |material| %>
+    <tr>
+      <td><a href="/ingredients/<%= material.id %>"><%= material.name %></a></td>
+      <td><%= material.external_id %></td>
+      <td>
+        <% if material.unit == "mg"  %>
+          <%= number_to_human(material.stock, units:{unit:"mg", thousand:"g", million:"Kg"})  %>
+        <% else %>
+            <%= material.stock%> <%= material.unit %>es
+        <% end %>
+      </td>
+
+      <!-- Mostrar boton de eliminar solo para admins -->
+      <% if current_user.role == 'admin' %>
+        <td><%= link_to 'Eliminar', material, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       <% end %>
 
-    </table>
+    </tr>
+    <% end %>
 
-  </div>
+    <!--Materiales de Empaque Secundarios -->
+    <tr class= "warning">
+      <th>Materiales de Empaque Secundarios</th>
+      <th></th>
+      <th></th>
+      <th></th>
+    </tr>
 
+    <% @ingredients_empaque_secundario.each do |material| %>
+    <tr>
+      <td><a href="/ingredients/<%= material.id %>"><%= material.name %></a></td>
+      <td><%= material.external_id %></td>
+      <td>
+        <% if material.unit == "mg"  %>
+          <%= number_to_human(material.stock, units:{unit:"mg", thousand:"g", million:"Kg"})  %>
+        <% else %>
+            <%= material.stock%> <%= material.unit %>es
+        <% end %> 
+      </td>
 
-<!-- Tabla para mateirales Primarios Excipientes -->
-
-  <div class="panel panel-default">
-  <!-- Default panel contents -->
-    <div class="panel-heading">Materiales Primarios Excipientes</div>
-
-  <!-- Table -->
-    <table class="table">
-      <tr>
-        <th>Material</th>
-        <th>Clave</th>
-        <th>Stock</th>
-        <th></th>
-        <th></th>
-      </tr>
-
-      <% @ingredients_primarios_excipientes.each do |material| %>
-        <tr>
-          <td><a href="/ingredients/<%= material.id %>"><%= material.name %></a></td>
-          <td><%= material.external_id %></td>
-          <td>
-            <div class="progress">
-              <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"> 60% Stock
-              </div>
-            </div> 
-          </td>
-          
-          <!-- Mostrar boton de eliminar solo para admins -->
-          <% if current_user.role == 'admin' %>
-            <td><%= link_to 'Eliminar', material, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-          <% end %>
-
-        </tr>
+      <!-- Mostrar boton de eliminar solo para admins -->
+      <% if current_user.role == 'admin' %>
+        <td><%= link_to 'Eliminar', material, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       <% end %>
 
-    </table>
-
-  </div>
-
-  <!-- Tabla para Materiales Empaque Primario -->
-
-  <div class="panel panel-default">
-  <!-- Default panel contents -->
-    <div class="panel-heading">Materiales de Empaque Primarios</div>
-
-  <!-- Table -->
-    <table class="table">
-      <tr>
-        <th>Material</th>
-        <th>Clave</th>
-        <th>Stock</th>
-        <th></th>
-        <th></th>
-      </tr>
-
-      <% @ingredients_empaque_primario .each do |material| %>
-        <tr>
-          <td><a href="/ingredients/<%= material.id %>"><%= material.name %></a></td>
-          <td><%= material.external_id %></td>
-          <td>
-            <div class="progress">
-              <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"> 60% Stock
-              </div>
-            </div> 
-          </td>
-
-          <!-- Mostrar boton de eliminar solo para admins -->
-          <% if current_user.role == 'admin' %>
-            <td><%= link_to 'Eliminar', material, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-          <% end %>
-
-        </tr>
-      <% end %>
-
-    </table>
-
-  </div>
-
-  <!-- Tabla para Materiales de Empaque Secundarios -->
-
-  <div class="panel panel-default">
-  <!-- Default panel contents -->
-    <div class="panel-heading">Materiales de Empaque Secundarios</div>
-
-  <!-- Table -->
-    <table class="table">
-      <tr>
-        <th>Material</th>
-        <th>Clave</th>
-        <th>Stock</th>
-        <th></th>
-        <th></th>
-      </tr>
-
-      <% @ingredients_empaque_secundario.each do |material| %>
-        <tr>
-          <td><a href="/ingredients/<%= material.id %>"><%= material.name %></a></td>
-          <td><%= material.external_id %></td>
-          <td>
-            <div class="progress">
-              <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"> 60% Stock
-              </div>
-            </div> 
-          </td>
-
-          <!-- Mostrar boton de eliminar solo para admins -->
-          <% if current_user.role == 'admin' %>
-            <td><%= link_to 'Eliminar', material, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-          <% end %>
-
-        </tr>
-      <% end %>
-
-    </table>
-
-  </div>
-
-
-
-
-
-
-
+    </tr>
+    <% end %>
+  </table>
 </div>
+
+
+
+
+
+
+
+
+
+
 
 
