--- a/app/views/calculates/_form.html.erb
+++ b/app/views/calculates/_form.html.erb
@@ -1,4 +1,16 @@
 <%= simple_form_for(@calculate) do |f| %>
+  <% if @calculate.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@calculate.errors.count, "error") %> prohibited this calculation from being saved:</h2>
+
+      <ul>
+      <% @calculate.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
+
 
   <div class="form-inputs">
     <%= f.input :product_id, :as => :hidden  %>
@@ -6,7 +18,7 @@
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit %>
+    <%= f.button :submit, "Calcular" %>
   </div>
 <% end %>
 
