--- a/app/views/components/_form.html.erb
+++ b/app/views/components/_form.html.erb
@@ -1,4 +1,15 @@
 <%= simple_form_for(@component) do |f| %>
+<% if @component.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@component.errors.count, "error") %> prohibited this component from being saved:</h2>
+
+      <ul>
+      <% @component.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+      <% end %>
+      </ul>
+    </div>
+<% end %>
 
   <%= @product_id %>
 
@@ -13,6 +24,6 @@
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit %>
+    <%= f.button :submit, 'Guardar' %>
   </div>
 <% end %>
