--- a/app/views/ingredients/_form.html.erb
+++ b/app/views/ingredients/_form.html.erb
@@ -1,5 +1,15 @@
 <%= simple_form_for(@ingredient) do |f| %>
-  <%= f.error_notification %>
+  <% if @ingredient.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@ingredient.errors.count, "error") %> prohibited this ingredient from being saved:</h2>
+
+      <ul>
+      <% @ingredient.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
 
   <div class="form-inputs">
     <%= f.input :name, label: 'Material', required: true, autofocus: true %>
@@ -13,16 +23,10 @@
     <%= f.input :active_or_excipient, label: 'Activo o Excipient (Si aplica)', collection: ["A","X","-"], required: true  %>
     <%= f.input :description, label: 'Descripcion' %>
 
-
-
-
-
-
-
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit %>
+    <%= f.button :submit, 'Guardar' %>
   </div>
 <% end %>
 
